[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.12.2",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ryanchao2012", email = "ryanchao2012@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "tabulate>=0.9.0",
]
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
