[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.12.2",
    "black>=23.7.0",
    "isort>=5.12.0",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ryanchao2012", email = "ryanchao2012@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "tabulate>=0.9.0",
    "click>=8.1.6",
    "python-slugify>=8.0.1",
    "pymupdf<1.22",
    "requests>=2.31.0",
]
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
