[project]
name = "tldr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ryanchao2012", email = "ryanchao2012@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.2",
    "pandas>=2.3.1",
    "pymupdf<1.22",
    "python-slugify>=8.0.4",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
data = ["nbformat>=5.10.4", "plotly>=6.2.0", "pyspark<3.5"]

[project.scripts]
tldr = "tldr:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
